kubernetes-network/canary/web2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: web
        image: m1keio/web:v0.2
        livenessProbe:
          tcpSocket:
            port: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        volumeMounts:
        - name: app
          mountPath: /app
          readOnly: true
      volumes:
      - name: app
        emptyDir: {}
