kubernetes-network/canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web2-svc
spec:
  selector:
    app: web2
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
